Correct a slight spacing issue on phones

--- a/styles/helpers.scss
+++ b/styles/helpers.scss
@@ -206,6 +206,8 @@ button, .square-button {
 .circle-button {
   position: fixed;
   bottom: 0;
+  left: 0;
+  right: 0;
   margin: 0 auto;
   display: inline-block;
   width: 50px;
